name:                  lrucaching
version:               0.3.3
synopsis:              LRU cache
description:           Please see README.md
homepage:              https://github.com/cocreature/lrucaching#readme
license:               BSD3
license-file:          LICENSE
author:                Moritz Kiefer
maintainer:            moritz.kiefer@purelyfunctional.org
copyright:             2016
category:              Unknown
build-type:            Simple
extra-source-files:    CHANGELOG.md
                       README.md
cabal-version:         >=1.10
tested-with:           GHC == 7.10.3, GHC == 8.0.2, GHC == 8.2.2, GHC == 8.4.1

library
  hs-source-dirs:      src
  exposed-modules:     Data.LruCache
                       Data.LruCache.IO
                       Data.LruCache.IO.Finalizer
                       Data.LruCache.Internal
  build-depends:       base        >= 4.8  && < 5
                     , base-compat >= 0.9  && < 0.11
                     , deepseq     >= 1.4  && < 1.5
                     , hashable    >= 1.2  && < 1.3
                     , psqueues    >= 0.2  && < 0.3
                     , vector      >= 0.11 && < 0.13
  ghc-options:         -Wall
  default-language:    Haskell2010

test-suite lru-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       Data.LruCacheSpec
                       Data.LruCache.IOSpec
                       Data.LruCache.SpecHelper
  build-depends:       base
                     , containers   >= 0.5 && < 0.7
                     , deepseq
                     , hashable
                     , hspec        >= 2.2 && < 2.6
                     , lrucaching
                     , QuickCheck   >= 2.8 && < 2.13
                     , transformers >= 0.4 && < 0.6
  default-language:    Haskell2010

source-repository head
  type:                git
  location:            https://github.com/cocreature/lrucaching
